Revert "Merge branch 'test_ilias' into 'develop'"
This reverts commit 54a687c782150a8e1a75f06625a3117e8aeed9b2